--- a/app/views/register.html
+++ b/app/views/register.html
@@ -20,7 +20,7 @@
       ng-show="myform.email.$invalid && myform.email.$touched">
       Must be a valid email</p>
 
-    <input type="text" name="password" placeholder="Password"
+    <input type="password" name="password" placeholder="Password"
       ng-model="user.password" ng-required="true">
     <p class="error validationerror"
       ng-show="myform.password.$invalid && myform.password.$touched">
