--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,13 +3,15 @@
     <h1>Hi there!</h1>
     <p>Log in to access the awesomeness!</p>
 
-    <input type="email" name="email" placeholder="Email" autofocus
+    <p ng-show="message">{{message}}</p>
+
+    <input type="email" name="email" placeholder="Email"
       ng-model="user.email" ng-required="true">
     <p class="error validationerror"
       ng-show="myform.email.$invalid && myform.email.$touched">
       Must be a valid email</p>
 
-    <input type="text" name="password" placeholder="Password"
+    <input type="password" name="password" placeholder="Password"
       ng-model="user.password" ng-required="true">
     <p class="error validationerror"
       ng-show="myform.password.$invalid && myform.password.$touched">
