--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -17,8 +17,10 @@
 //Core Partial
 @import "variables";
 @import "base";
+@import "mixins.scss";
 
 //Import Modules
+@import "modules/nav.scss";
 
 
 //External Import
