--- a/app/views/meetings.html
+++ b/app/views/meetings.html
@@ -1,6 +1,6 @@
 <section class="meetings">
 
-  <div ng-hide="currentUser" class="sorry">
+  <div ng-show="noUser" class="sorry">
     <h1>Sorry</h1>
     <p>Only registered user can create and manage meetings.</p>
     <p>Please <a ng-href="#/register">Register</a> or <a ng-href="#/login">Login</a>.</p>
