--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -2,7 +2,7 @@
 <ul>
   <li class="branding"><a ng-href="#/">angularData</a></li>
   <li ng-show="currentUser"><a ng-href="#/meetings">Meetings</a></li>
-  <li ng-hide="currentUser"><a ng-href="#/login">Login</a></li>
-  <li ng-hide="currentUser"><a ng-href="#/register">Register</a></li>
+  <li ng-show="noUser"><a ng-href="#/login">Login</a></li>
+  <li ng-show="noUser"><a ng-href="#/register">Register</a></li>
 </ul>
 </div>
