--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -1,8 +1,8 @@
-<div class="table">
-<ul>
-  <li class="branding"><a ng-href="#/">angularData</a></li>
-  <li ng-show="currentUser"><a ng-href="#/meetings">Meetings</a></li>
-  <li ng-show="noUser"><a ng-href="#/login">Login</a></li>
-  <li ng-show="noUser"><a ng-href="#/register">Register</a></li>
-</ul>
+<div class="navbar">
+  <ul>
+    <li class="branding"><a ng-href="#/">angularData</a></li>
+    <li ng-show="currentUser"><a ng-href="#/meetings">Meetings<span ng-if="howManyMeetings>0"> ({{howManyMeetings}})</span></a></li>
+    <li ng-show="noUser"><a ng-href="#/login">Login</a></li>
+    <li ng-show="noUser"><a ng-href="#/register">Register</a></li>
+  </ul>
 </div>
