add bootstrap nav
grunt auto add bootstrap to index.html

--- a/app/styles/modules/_nav.scss
+++ b/app/styles/modules/_nav.scss
@@ -1,10 +1,12 @@
-header {
-  @include clearfix;
-  @include container;
   nav {
-    @include span(8 of 12);
+    ul {
+      li {
+        a.btn {
+          padding: 6px 12px;
+        }
+      }
+    }
   }
   .userdock {
     @include span(4 of 12 last);
   }
-}
