--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -1,8 +1,25 @@
-<div class="navbar">
-  <ul>
-    <li class="branding"><a ng-href="#/">angularData</a></li>
-    <li ng-show="currentUser"><a ng-href="#/meetings">Meetings<span ng-if="howManyMeetings>0"> ({{howManyMeetings}})</span></a></li>
-    <li ng-show="noUser"><a ng-href="#/login">Login</a></li>
-    <li ng-show="noUser"><a ng-href="#/register">Register</a></li>
-  </ul>
+<div class="container-fluid">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Brand</a>
+  </div>
+
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="branding"><a ng-href="#/">angularData</a></li>
+      <li ng-show="currentUser"><a ng-href="#/meetings">Meetings<span ng-if="howManyMeetings>0"> ({{howManyMeetings}})</span></a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li ng-show="noUser"><a ng-href="#/register">Register</a></li>
+      <li ng-show="noUser"><a class="btn btn-default navbar-btn" ng-href="#/login">Login</a></li>
+    </ul>
+    <p class="navbar-text navbar-right" ng-controller="StatusCtrl" ng-show="currentUser">
+      <span>Hi, {{ currentUser.firstname }}</span> <a href ng-click="logout()">Logout</a>
+    </p>
+  </div>
 </div>
