add layout.scss; clean up style.scss;
only compass core mixins and reset

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -4,11 +4,6 @@
 //Compass imports
 @import "compass";
 @import "compass/reset";
-@import "compass/css3/box-shadow";
-@import "compass/css3/text-shadow";
-@import 'compass/css3/filter';
-@import "compass/css3/flexbox";
-@import "compass/css3/transition";
 
 //External Libraries
 @import "susy";
@@ -16,11 +11,12 @@
 
 //Core Partial
 @import "variables";
+@import "mixins";
 @import "base";
-@import "mixins.scss";
+@import "layout";
 
 //Import Modules
-@import "modules/nav.scss";
+@import "modules/nav";
 
 
 //External Import
