--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@
 
 //Import Modules
 @import "modules/nav";
+@import "modules/meetings";
 
 //External Import
 @import "http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css";
