--- a/app/views/meetings.html
+++ b/app/views/meetings.html
@@ -6,18 +6,23 @@
     <p>Please <a ng-href="#/register">Register</a> or <a ng-href="#/login">Login</a>.</p>
   </div>
 
-  <div ng-show="currentUser" class="meetings">
-    <h1 ng-if="howManyMeetings>0">Your Meetings</h1>
+  <div class="meetings-content" ng-show="currentUser">
+    <div class="page-header">
+      <h1 ng-if="howManyMeetings>0">Your Meetings</h1>
+    </div>
     <form name="myform"
     ng-submit="addMeeting()" novalidate>
-      <input type="text" name="mymeetingname" placeholder="Meeting Name"
-      ng-model="meetingname" ng-required="true">
-      <button type="submit"
-      ng-disabled="myform.mymeetingname.$invalid">+</button>
+      <div class="input-group">
+        <input type="text" class="form-control" name="mymeetingname" placeholder="Meeting Name"
+        ng-model="meetingname" ng-required="true">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="submit" ng-disabled="myform.mymeetingname.$invalid"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
+        </span>
+      </div><!-- /input-group -->
     </form>
-    <div class="meeting" ng-repeat="(key, meeting) in meetings"><!--always as key: value pair-->
-      <a class="btn btn-checkin" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}">Check in</a>
-      <span>{{meeting.name}}</span> <button type="submit" ng-click="deleteMeeting(key)">-</button>
+    <div class="panel panel-default meeting" ng-repeat="(key, meeting) in meetings"><!--always as key: value pair-->
+      <a class="btn btn-default btn-xs" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+      <span>{{meeting.name}}</span> <button class="btn btn-default btn-xs pull-right" type="submit" ng-click="deleteMeeting(key)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
     </div>
   </div>
 
