--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" id="main-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li class="branding"><a ng-href="#/">angularData</a></li>
-      <li ng-show="currentUser"><a ng-href="#/meetings">Meetings<span ng-if="howManyMeetings>0"> ({{howManyMeetings}})</span></a></li>
+      <li ng-show="currentUser"><a ng-href="#/meetings">Meetings <span class="badge" ng-if="howManyMeetings>0">{{howManyMeetings}}</span></a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li ng-show="noUser"><a ng-href="#/login">Login</a></li>
