--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,7 @@
 //Import Modules
 @import "modules/nav";
 @import "modules/meetings";
+@import "modules/checkins";
 
 //External Import
 @import "http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css";
