--- a/app/views/checkins.html
+++ b/app/views/checkins.html
@@ -1,29 +1,30 @@
 <section class="register">
+  <div class="page-header">
+    <h1>Check-in <small>Fill out this form to check-in to our meeting or go <a ng-href="#/meetings">back to meetings</a></small></h1>
+  </div>
   <form name="myform" ng-submit="addCheckin()" novalidate>
-    <h1>Check-in</h1>
-    <p>Fill out this form to check-in to our meeting or go <a ng-href="#/meetings">back to meetings</a></p>
-
     <p ng-show="message">{{message}}</p>
-    <input type="firstname" name="firstname" placeholder="First Name" autofocus
-    ng-model="user.firstname" ng-required="true">
-    <p class="error validationerror"
-    ng-show="myform.firstname.$invalid && myform.firstname.$touched">
-    First name is requried</p>
 
-    <input type="lastname" name="lastname" placeholder="Last Name"
-    ng-model="user.lastname" ng-required="true">
-    <p class="error validationerror"
-    ng-show="myform.lastname.$invalid && myform.lastname.$touched">
-    Last name is requried</p>
+    <input class="form-control"
+      ng-class="{'alert alert-danger': myform.firstname.$invalid && myform.firstname.$touched}"
+      type="firstname" name="firstname"
+      placeholder="{{myform.firstname.$invalid && myform.firstname.$touched ? 'First name is requried' : 'First Name' }}"
+      ng-model="user.firstname" ng-required="true">
 
-    <input type="email" name="email" placeholder="Email"
-    ng-model="user.email" ng-required="true">
-    <p class="error validationerror"
-    ng-show="myform.email.$invalid && myform.email.$touched">
-    Must be a valid email</p>
+    <input class="form-control"
+      ng-class="{'alert alert-danger': myform.lastname.$invalid && myform.lastname.$touched}"
+      type="lastname" name="lastname"
+      placeholder="{{myform.lastname.$invalid && myform.lastname.$touched ? 'Last name is requried' : 'Last Name' }}"
+      ng-model="user.lastname" ng-required="true">
 
-    <button type="submit" class="btn"
-    ng-disabled="myform.$invalid">
-    Check-in</button>
+    <input class="form-control"
+      ng-class="{'alert alert-danger': myform.email.$invalid && myform.email.$touched}"
+      type="email" name="email"
+      placeholder="{{myform.email.$invalid && myform.email.$touched ? 'Must be a valid email' : 'Email' }}"
+      ng-model="user.email" ng-required="true">
+
+    <button type="submit" class="btn btn-default"
+      ng-disabled="myform.$invalid">
+      Check-in</button>
   </form>
 </section>
