--- a/app/views/checkinslist.html
+++ b/app/views/checkinslist.html
@@ -1,12 +1,20 @@
 <section class="checkins-list">
-  <h1>Check-ins for {{meetingName}}</h1>
-  <p>Here's a list of your latest check-ins</p>
-  <ul>
-    <li ng-repeat="checkin in checkins">
-      <div class="info">
-        <h2>{{checkin.firstname}} {{checkin.lastname}}</h2>
-        <div class="date">{{checkin.date | date:"MMM d, yy h:mm a"}}</div>
-      </div>
-    </li>
-  </ul>
+  <div class="page-header">
+    <h1>Check-ins for {{meetingName}} <small>Here's a list of your latest check-ins</small></h1>
+  </div>
+  <div class="panel panel-default">
+    <ul class="list-group">
+      <li class="list-group-item" ng-repeat="checkin in checkins">
+        <div class="info">
+          <div class="btn-group btn-group-xs pull-right">
+            <button class="btn btn-default" ng-click="deleteCheckin(checkin.$id)" type="button">
+              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            </button>
+          </div>
+          <h3>{{checkin.firstname}} {{checkin.lastname}}</h3>
+          <p class="date">{{checkin.date | date:"MMM d, yy h:mm a"}}</p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
