--- a/app/views/meetings.html
+++ b/app/views/meetings.html
@@ -21,8 +21,14 @@
       </div><!-- /input-group -->
     </form>
     <div class="panel panel-default meeting" ng-repeat="(key, meeting) in meetings"><!--always as key: value pair-->
-      <a class="btn btn-default btn-xs" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-      <span>{{meeting.name}}</span> <button class="btn btn-default btn-xs pull-right" type="submit" ng-click="deleteMeeting(key)"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+      <div class="btn-group btn-group-xs" role="group" aria-label="Meeting Options">
+        <a class="btn btn-default" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        <a class="btn btn-default" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}/checkinsList"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
+      </div>
+      <span>{{meeting.name}}</span>
+      <button class="btn btn-default btn-xs pull-right" ng-click="deleteMeeting(key)" type="button">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+      </button>
     </div>
   </div>
 
