--- a/app/views/meetings.html
+++ b/app/views/meetings.html
@@ -22,7 +22,7 @@
     </form>
     <div class="panel panel-default meeting" ng-repeat="(key, meeting) in meetings"><!--always as key: value pair-->
       <div class="btn-group btn-group-xs" role="group" aria-label="Meeting Options">
-        <a class="btn btn-default" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        <a class="btn btn-default" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span></a>
         <a class="btn btn-default" ng-href="#/checkins/{{currentUser.regUser}}/{{key}}/checkinsList"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a>
       </div>
       <span>{{meeting.name}}</span>
