--- a/app/styles/modules/_checkinsList.scss
+++ b/app/styles/modules/_checkinsList.scss
@@ -26,7 +26,7 @@
         form {
           opacity: 1;
         }
-        .btn-success {
+        .btn-love {
           background-color: #fff;
           border-color: #ccc;
           color: #5cb85c;
