change homepage content and style

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@
 
 //Import Modules
 @import "modules/nav";
+@import "modules/home";
 @import "modules/meetings";
 @import "modules/checkins";
 @import "modules/checkinsList";
