--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,21 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<section id="home">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-4 title">
+      <h1>Handy Tools for Planners</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-6 col-md-4 col-lg-3">
+      <div class="panel panel-default">
+        <a ng-href="#/meetings">
+          <div class="panel-heading">
+            <h3 class="panel-title">Meeting Clipboard</h3>
+          </div>
+          <div class="panel-body">
+            Create meetings, check people in and give attendee gifts.
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
