log and register improvements
placeholder notification
input field bg color change

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@
 //Import Modules
 @import "modules/nav";
 @import "modules/home";
+@import "modules/login";
 @import "modules/meetings";
 @import "modules/checkins";
 @import "modules/checkinsList";
