checkins page class fix

--- a/app/views/checkins.html
+++ b/app/views/checkins.html
@@ -1,4 +1,4 @@
-<section class="register">
+<section class="checkins">
   <div class="page-header">
     <h1>{{meetingName}} <small>Fill out this form to check-in <span ng-show="currentUser">or go <a ng-href="#/meetings">back to my meetings</a></span></small><a class="btn btn-default pull-right" ng-href="#/checkins/{{whichUser}}/{{whichMeeting}}/checkinsList"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></a></h1>
   </div>
