--- a/app/styles/modules/_meetings.scss
+++ b/app/styles/modules/_meetings.scss
@@ -1,12 +1,17 @@
-.meetings-content {
-  form {
-    margin: 0 0 12px;
+.meetings {
+  .title {
+    h1, p { text-align: center; }
   }
+  .meetings-content {
+    form {
+      margin: 0 0 12px;
+    }
 
-  .panel.meeting {
-    padding: 8px 6px;
-    .btn-group {
-      margin: 0 3px 0;
+    .panel.meeting {
+      padding: 8px 6px;
+      .btn-group {
+        margin: 0 3px 0;
+      }
     }
   }
 }
